src/test/parse-fail/pat-lt-bracket-7.rs
fn main() {
    for thing(x[]) in foo {} //~ ERROR: expected one of `)`, `,`, or `@`, found `[`
}
